[package]
name = "orinium_browser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
pollster = "0.3"
env_logger = "0.11.8"
log = "0.4.0"
winit = "0.30.12"
wgpu = "27.0.1"
wgpu_text = "27.0.1"
bytemuck = { version = "1.14", features = ["derive"] }
url = "2.5"
rustls = { version = "0.22.4", default-features = false, features = ["tls12"] }
rustls-native-certs = "0.7.0"
tokio-rustls = "0.25.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
image = "0.24"
fontdue = "0.7"
ab_glyph = "0.2"
quinn = "0.11.9"
h3 = "0.0.8"