[package]
name = "orinium_browser"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
pollster = "0.4"
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
entities = "1.0.1"
winit = "0.30.12"
wgpu = "27.0.1"
wgpu_text = "27.0.1"
glyphon = "0.9.0"
fontdue = "0.9.3"
ab_glyph = "0.2"
bytemuck = { version = "1.24", features = ["derive"] }
url = "2.5"
rustls = { version = "0.22", default-features = false, features = ["tls12"] }
rustls-native-certs = "0.8.2"
tokio-rustls = "0.25"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
image = "0.25.9"

[dev-dependencies]
colored = "3.0.0" # コマンドラインハイライト用
strsim = "0.11.1"
