[package]
name = "orinium_browser"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]
resolver = "3"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "net", "time", "io-std", "fs"] }
pollster = "0.4"
env_logger = "0.11.8"
log = "0.4.29"
once_cell = "1.21.3"
entities = "1.0.1"
winit = "0.30.12"
wgpu = "28.0.0"
wgpu-types = "28.0.0"
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "37b973d" }
fontdue = "0.9.3"
ab_glyph = "0.2"
bytemuck = { version = "1.24", features = ["derive"] }
url = "2.5"
rustls = { version = "0.23.36", default-features = false, features = ["tls12"] }
rustls-native-certs = "0.8.3"
tokio-rustls = "0.26.4"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
image = "0.25.9"
ui_layout = "0.7.0"
futures = "0.3.31"

[dev-dependencies]
colored = "3.1.1" # コマンドラインハイライト用
strsim = "0.11.1"
